<resources>
    <string name="app_name">Kwad Spots</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="main_tab_home">Home</string>
    <string name="main_tab_search">Search</string>
    <string name="main_tab_spots">Spots</string>
    <string name="main_tab_profile">Profile</string>

    <string name="text_log_in">Log In</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_kwad_spots">Kwad Spots</string>
    <string name="text_no_account">No account? Sign up here.</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="back_to_log_in">Back to log in.</string>
    <string name="forgot_password">Forgot password? Tap here.</string>

    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_password_verify_hint">Verify Password</string>
    <string name="edit_text_spot_name_hint">Spot name</string>
    <string name="edit_text_spot_type_hint">Spot type</string>
    <string name="edit_text_spot_comment_hint">Comment</string>

    <string name="spots_actions_add_photo">Add Photo</string>
    <string name="spots_actions_add_something">Add Another Thing</string>
    <string name="password_reset_submit">Send Reset Email</string>
    <string name="password_reset_info">We\'ll need your email so we can send a reset link.</string>

    <string name="toolbar_action_create">Create</string>
    <string name="toolbar_action_comment">Add Comment</string>

    <string name="add_a_picture">Add a picture</string>
    <string name="spot_picture_description">Spot Image</string>

    <string name="create_spot_button">Create Spot</string>
</resources>
